# autogradpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  autograd.cpp  autograd.h  test.cpp
include/: containers.h  detail.h  optimizers.h
include/autogradpp/: autograd.h  containers.h  detail.h  optimizers.h  serialization.h
src/: containers.cpp  detail.cpp  optimizers.cpp
tests/: CMakeLists.txt  container_t.cpp  integration_t.cpp  misc_t.cpp  optim_t.cpp  rnn_t.cpp  serialization_t.cpp  test.cpp  test.h  variant_t.cpp
